--- a/apps/photoprism/photoprism/02_secrets.yaml
+++ b/apps/photoprism/photoprism/02_secrets.yaml
@@ -5,5 +5,5 @@ metadata:
   name: photoprism-secrets
   namespace: photoprism
 stringData:
-  PHOTOPRISM_ADMIN_PASSWORD: <your admin password here>
-  PHOTOPRISM_DATABASE_DSN: username:password@tcp(db-server-address:3306)/dbname?charset=utf8mb4,utf8&parseTime=true
+  PHOTOPRISM_ADMIN_PASSWORD: password
+  # PHOTOPRISM_DATABASE_DSN: username:password@tcp(db-server-address:3306)/dbname?charset=utf8mb4,utf8&parseTime=true
